--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,8 +2,7 @@ group 'record.wilson.flutter.com.flutter_plugin_record'
 version '1.0-SNAPSHOT'
 
 buildscript {
-//    ext.kotlin_version = '1.2.71'
-    ext.kotlin_version = '1.5.20'
+    ext.kotlin_version = '1.6.0'
 
     repositories {
         google()
@@ -28,8 +27,20 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    namespace 'record.wilson.flutter.com.flutter_plugin_record'
+    if (project.android.hasProperty("namespace")) {
+        namespace 'record.wilson.flutter.com.flutter_plugin_record'
+    }
+
     compileSdkVersion 34
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
